--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
+  <head>
+    <title> No·tam Ar Chénub. </title>
+  </head>
   <body>
-Hello there, awesome person!
+    Du·caré Cathamos!
   </body>
 </html>
