--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1> Ino·gez mi. </h1>
     Du·caré Cathamos!
+    <img src="https://avatars0.githubusercontent.com/u/69884258?v=4">
   </body>
 </html>
