--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title> No·tam Ar Chénub. </title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1> Ino·gez mi. </h1>
